fix overflow page

--- a/src/pages/SiftPage/shiftPage.module.scss
+++ b/src/pages/SiftPage/shiftPage.module.scss
@@ -93,7 +93,7 @@
     left: 0px;
     height: 84%;
     width: 48%;
-    padding: 8px 8px;
+    padding: 2px 8px;
     padding-left: 0px;
 }
 
@@ -161,6 +161,7 @@
 
 .status-input {
     width: 100%;
+    margin: 1.5px 0;
     border-radius: none;
     box-shadow: none !important;
     border: transparent;
@@ -175,16 +176,9 @@
 
 .filter-second-date {
     position: relative;
-    padding: 8px 8px;
+    padding: 2px 8px;
     width: 50%;
     text-align: right;
-
-    button {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
 }
 
 .filter-btn {
@@ -218,7 +212,7 @@
     align-items: center;
     width: 100%;
     height: 60%;
-    margin-top: 15px;
+    margin-top: 12px;
     box-shadow: 0px 24px 65px rgba(20, 20, 43, 0.16);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
